--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Homepage: https://github.com/abseil/abseil-py
 Vcs-Git: https://salsa.debian.org/python-team/packages/python-absl.git
 Vcs-Browser: https://salsa.debian.org/python-team/packages/python-absl
 Rules-Requires-Root: no
+Testsuite: autopkgtest-pkg-python
 
 Package: python3-absl
 Architecture: all
