--- a/debian/control
+++ b/debian/control
@@ -1,29 +1,29 @@
 Source: python-absl
-Section: python
+Section: admin
 Priority: optional
-Maintainer: Debian Python Team <team+python@tracker.debian.org>
-Uploaders:
- Romain Porte <debian@microjoe.org>,
-Build-Depends:
- debhelper-compat (= 13),
- dh-python,
- python3-all,
- python3-setuptools,
- python3-setuptools-scm,
- python3-six,
+Maintainer: Arturo Borrero Gonzalez <arturo@debian.org>
+Build-Depends: debhelper-compat (= 13), dh-python, python3-setuptools, python3-all, python3-six
 Standards-Version: 4.5.1
 Homepage: https://github.com/abseil/abseil-py
-Vcs-Git: https://salsa.debian.org/python-team/packages/python-absl.git
-Vcs-Browser: https://salsa.debian.org/python-team/packages/python-absl
+Vcs-Browser: https://salsa.debian.org/debian/pkg-python-absl
+Vcs-Git: https://salsa.debian.org/debian/pkg-python-absl.git
+#Testsuite: autopkgtest-pkg-python
 Rules-Requires-Root: no
-Testsuite: autopkgtest-pkg-python
 
 Package: python3-absl
 Architecture: all
-Depends:
- ${misc:Depends},
- ${python3:Depends},
-Description: Abseil Python Common Libraries
- A collection of Python library code for building Python applications. The code
- is collected from Google's own Python code base, and has been extensively
- tested and used in production.
+Depends: ${python3:Depends}, ${misc:Depends}
+Description: Google's library for building Python applications
+ A collection of Python library code for building Python applications. The
+ code is collected from Google's own Python code base, and has been
+ extensively tested and used in production. Some features include:
+ .
+  * Simple application startup
+ .
+  * Distributed commandline flags system
+ .
+  * Custom logging module with additional features
+ .
+  * Testing utilities
+ .
+ This package installs the library for Python 3.
