--- a/debian/rules
+++ b/debian/rules
@@ -1,9 +1,9 @@
 #!/usr/bin/make -f
+# See debhelper(7) (uncomment to enable)
+# output every command that modifies files on the build system.
+#export DH_VERBOSE = 1
 
-export LC_ALL=C.UTF-8
+export PYBUILD_NAME=python3-abls
 
 %:
 	dh $@ --with python3 --buildsystem=pybuild
-
-override_dh_installchangelogs:
-	dh_installchangelogs absl/CHANGELOG.md
