--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,6 @@ Build-Depends:
  dh-python,
  python3-all,
  python3-setuptools,
- python3-setuptools-scm,
  python3-six,
 Standards-Version: 4.5.1
 Homepage: https://github.com/abseil/abseil-py
@@ -27,3 +26,13 @@ Description: Abseil Python Common Libraries
  A collection of Python library code for building Python applications. The code
  is collected from Google's own Python code base, and has been extensively
  tested and used in production.
+ .
+ Some features include:
+ .
+  * Simple application startup
+ .
+  * Distributed commandline flags system
+ .
+  * Custom logging module with additional features
+ .
+  * Testing utilities
