--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 export LC_ALL=C.UTF-8
 
 %:
-	dh $@ --with python3 --buildsystem=pybuild
+	dh $@ --buildsystem=pybuild
 
 override_dh_installchangelogs:
 	dh_installchangelogs absl/CHANGELOG.md
