--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Uploaders:
 Build-Depends:
  debhelper-compat (= 13),
  dh-sequence-python3,
- python3-all,
+ libpython3-all-dev,
+ python3-all-dev:any,
  python3-setuptools,
  python3-six,
 Standards-Version: 4.6.0
